--- a/SBB_Fahrplan_2.0/SBB_Fahrplan_2.0_UI.csproj
+++ b/SBB_Fahrplan_2.0/SBB_Fahrplan_2.0_UI.csproj
@@ -85,6 +85,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendMailForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SendMailForm.Designer.cs">
+      <DependentUpon>SendMailForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="StandardTimetable.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -125,6 +131,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SendMailForm.resx">
+      <DependentUpon>SendMailForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="StandardTimetable.resx">
       <DependentUpon>StandardTimetable.cs</DependentUpon>
     </EmbeddedResource>
